<resources>
    <string name="app_name">Barkod Cepte</string>
    <string name="title_activity_mainscreen">mainscreen</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="urun_fiyat">ÜRÜN FİYAT</string>
    <string name="urun_isim">ÜRÜN ADI</string>
    <string name="Current_Barcode">Current Barcode</string>
    <string name="Last_Barcode">Last Barcode</string>
    <string name="toplam">TOPLAM :</string>
    <string name="tl">TL</string>
    <string name="barkod">BARKOD</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="myStore">Marketim</string>
    <string name="sell">Satış</string>
    <string name="addProduct">Ürün Ekle</string>
    <string name="addStock">Stok Ekle</string>
    <string name="stockFollow">Stok Takip</string>
    <string name="viewProduct">Ürün</string>
    <string name="viewProduct2">Görüntüle</string>
    <string name="user_name">Kullanıcı Adı</string>
    <string name="password">Şifre</string>
    <string name="email">Email</string>
    <string name="login">Giriş</string>
    <string name="sign_up">Kayıt Ol</string>
    <string name="stock">Stok Giriniz*</string>
    <string name="stock_count">Stok Adeti*</string>
    <string name="barcode">Barkod*</string>
    <string name="price">Fiyat*</string>
    <string name="product_name">Ürün Adı*</string>
    <string name="selected_item">Seçilen Ürün :</string>
    <string name="selled">Yapılan Satışlar</string>
    <string name="save">Kaydet</string>
    <string name="end">Bitti</string>
    <string name="delete">SİL</string>
    <string name="imports">İçe Aktar</string>
    <string name="export">Dışa Aktar</string>
    <string name="analysis">Analiz</string>
    <string name="buyPrice">Alış Fiyatı*</string>

</resources>
