<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".AddProductActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <SurfaceView
            android:id="@+id/surface_addProduct"
            android:layout_width="match_parent"
            android:layout_height="220dp" />


        <EditText
            android:id="@+id/edt_ProductBardcode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/barcode"
            android:inputType="number"
            android:textColor="@color/edt_text"
            android:textColorHint="@color/edt_hint"
            android:textColorHighlight="@color/edt_link" />

        <EditText
            android:id="@+id/edt_ProductName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/product_name"
            android:inputType="textPersonName"
            android:textColor="@color/edt_text"
            android:textColorHint="@color/edt_hint"
            android:textColorHighlight="@color/edt_link" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edt_ProductPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/price"
                android:inputType="number|numberDecimal"
                android:textColor="@color/edt_text"
                android:textColorHint="@color/dark_yellow"
                android:textColorHighlight="@color/edt_link" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="10dp"
                android:text="TL"
                android:textColor="@color/light_yellow"
                android:textSize="20sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edt_BuyPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/buyPrice"
                android:inputType="number|numberDecimal"
                android:textColor="@color/edt_text"
                android:textColorHint="@color/dark_yellow"
                android:textColorHighlight="@color/edt_link" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="10dp"
                android:text="TL"
                android:textColor="@color/light_yellow"
                android:textSize="20sp" />
        </LinearLayout>

        <EditText
            android:id="@+id/edt_ProductStock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/stock_count"
            android:inputType="number|numberDecimal"
            android:textColor="@color/edt_text"
            android:textColorHint="@color/edt_hint"
            android:textColorHighlight="@color/edt_link" />

        <Button
            android:id="@+id/btn_AddProduct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:text="@string/save"
            android:textColor="@color/btn_text"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>