<?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="364dp"
        android:layout_height="470dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="81dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent">

            <ImageButton
                android:id="@+id/btn_sell"
                android:layout_width="99dp"
                android:layout_height="90dp"
                android:background="@drawable/sell_icon_24dp"
                android:scaleType="center" />

            <ImageButton
                android:id="@+id/btn_myStore"
                android:layout_width="99dp"
                android:layout_height="90dp"
                android:layout_marginLeft="20dp"
                android:background="@drawable/market_icon_24dp" />

            <ImageButton
                android:id="@+id/btn_addProduct"
                android:layout_width="99dp"
                android:layout_height="90dp"
                android:layout_marginLeft="20dp"
                android:background="@drawable/add_product_icon_24dp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="116dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:text="@string/sell"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:text="@string/myStore"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:text="@string/addProduct"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="81dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent">

            <ImageButton
                android:id="@+id/btn_viewProduct"
                android:layout_width="99dp"
                android:layout_height="90dp"
                android:background="@drawable/product_view_24dp" />

            <ImageButton
                android:id="@+id/btn_stockFollow"
                android:layout_width="99dp"
                android:layout_height="90dp"
                android:layout_marginLeft="20dp"
                android:background="@drawable/stock_follow_24dp" />

            <ImageButton
                android:id="@+id/btn_addStock"
                android:layout_width="99dp"
                android:layout_height="90dp"
                android:layout_marginLeft="20dp"
                android:background="@drawable/ic_playlist_add_black_24dp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="116dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/viewProduct"
                android:textColor="#000000"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:text="@string/stockFollow"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35dp"
                android:text="@string/addStock"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold" />
        </TableRow>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>